# huggingface-examples

./: VQ&A.py  VQ&A_with_pipeline.py  audio_generator.py  audio_preprocessing.py  doc_Q&A.py  download_model_locally.py  evaluate_pipeline_perf.py  finding_popular_text_to_image_model.py  finetune_text_to_speech.py  finetuning_CV_model.py  generate_speaker_embedding.py  get_hf_tasks.py  get_model_metadata.py  huggingface_endpoint_exp.py  image_classification.py  image_editing_with_diffusion_model.py  image_inpainting.py  image_processing.py  image_segmentation.py  inference_client_example.py  load_dataset_eample.py  login_to_HF.py  main.py  measure_clip_score.py  model_search.py  multi_modal_sentiment_analysis.py  object_detection.py  passing_options_to_models_pipeline.py  pipeline_example_1.py  pyproject.toml  speech_to_text.py  text_classification_exp.py  text_generation_langchain_huggingface.py  text_processing.py  text_summarization_exp.py  translation_pipeline.py  video_generation.py  zero_short_video_classification_clap.py  zero_shot_learning_with_clip.py
Auto_Class_Models/: __init__.py  classification_exp.py
Langchain/: __init__.py  agent_exp.py  fewshot_prompt_example.py  fewshot_prompt_example2.py  react_agent.py  sequesntial_chain.py  simple_exp.py  with_chat_prompt_template.py  with_prompt_template.py
