[project]
name = "huggingface-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "diffusers>=0.35.1",
    "evaluate>=0.4.5",
    "huggingface-hub>=0.34.4",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-huggingface>=0.3.1",
    "pypdf>=6.0.0",
    "python-dotenv>=1.1.1",
    "torch>=2.8.0",
    "transformers>=4.56.1",
]
